[gd_scene load_steps=2 format=3 uid="uid://c5lvtw6fivry6"]

[ext_resource type="Script" uid="uid://dwsrnyntio7r" path="res://scripts/StagePopup.gd" id="1_0x0x0"]

[node name="StagePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="PopupContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="StageLabel" type="Label" parent="PopupContainer"]
layout_mode = 2
text = "Stage 1: City Streets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="PopupContainer"]
layout_mode = 2
text = "Continue to Next Stage"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
